--- a/.gitignore
+++ b/.gitignore
@@ -221,6 +221,8 @@ gltests/malloca.o
 gltests/perror.o
 gltests/strerror_r.o
 gltests/sys/
+gltests/test-accept
+gltests/test-accept.o
 gltests/test-alignof
 gltests/test-alignof.o
 gltests/test-alloca-opt
@@ -229,6 +231,8 @@ gltests/test-arpa_inet
 gltests/test-arpa_inet.o
 gltests/test-binary-io
 gltests/test-binary-io.o
+gltests/test-bind
+gltests/test-bind.o
 gltests/test-btowc
 gltests/test-btowc.o
 gltests/test-c-ctype
@@ -237,6 +241,10 @@ gltests/test-c-strcasecmp
 gltests/test-c-strcasecmp.o
 gltests/test-c-strncasecmp
 gltests/test-c-strncasecmp.o
+gltests/test-close
+gltests/test-close.o
+gltests/test-connect
+gltests/test-connect.o
 gltests/test-dup2
 gltests/test-dup2.o
 gltests/test-environ
@@ -247,20 +255,34 @@ gltests/test-fclose
 gltests/test-fclose.o
 gltests/test-fcntl-h
 gltests/test-fcntl-h.o
+gltests/test-fdopen
+gltests/test-fdopen.o
 gltests/test-fflush
 gltests/test-fflush.o
 gltests/test-fflush2
 gltests/test-fflush2.o
+gltests/test-fgetc
+gltests/test-fgetc.o
 gltests/test-float
 gltests/test-float.o
 gltests/test-fpurge
 gltests/test-fpurge.o
+gltests/test-fputc
+gltests/test-fputc.o
+gltests/test-fread
+gltests/test-fread.o
 gltests/test-freading
 gltests/test-freading.o
 gltests/test-fseek
 gltests/test-fseek.o
 gltests/test-fseeko
 gltests/test-fseeko.o
+gltests/test-fseeko3
+gltests/test-fseeko3.o
+gltests/test-fseeko4
+gltests/test-fseeko4.o
+gltests/test-fstat
+gltests/test-fstat.o
 gltests/test-ftell
 gltests/test-ftell.o
 gltests/test-ftell3
@@ -269,6 +291,10 @@ gltests/test-ftello
 gltests/test-ftello.o
 gltests/test-ftello3
 gltests/test-ftello3.o
+gltests/test-ftruncate
+gltests/test-ftruncate.o
+gltests/test-fwrite
+gltests/test-fwrite.o
 gltests/test-getaddrinfo
 gltests/test-getaddrinfo.o
 gltests/test-getcwd-lgpl
@@ -295,6 +321,10 @@ gltests/test-intprops
 gltests/test-intprops.o
 gltests/test-inttypes
 gltests/test-inttypes.o
+gltests/test-ioctl
+gltests/test-ioctl.o
+gltests/test-listen
+gltests/test-listen.o
 gltests/test-locale
 gltests/test-locale.o
 gltests/test-localename
@@ -321,6 +351,8 @@ gltests/test-netinet_in
 gltests/test-netinet_in.o
 gltests/test-open
 gltests/test-open.o
+gltests/test-pathmax
+gltests/test-pathmax.o
 gltests/test-perror
 gltests/test-perror.o
 gltests/test-perror2
@@ -335,6 +367,8 @@ gltests/test-quotearg
 gltests/test-quotearg-simple
 gltests/test-quotearg-simple.o
 gltests/test-quotearg.o
+gltests/test-recv
+gltests/test-recv.o
 gltests/test-select
 gltests/test-select-fd
 gltests/test-select-fd.o
@@ -347,12 +381,20 @@ gltests/test-setlocale1
 gltests/test-setlocale1.o
 gltests/test-setlocale2
 gltests/test-setlocale2.o
+gltests/test-setsockopt
+gltests/test-setsockopt.o
+gltests/test-shutdown
+gltests/test-shutdown.o
+gltests/test-signal-h
+gltests/test-signal-h.o
 gltests/test-snprintf
 gltests/test-snprintf.o
 gltests/test-sockets
 gltests/test-sockets.o
 gltests/test-stat
 gltests/test-stat.o
+gltests/test-stdalign
+gltests/test-stdalign.o
 gltests/test-stdbool
 gltests/test-stdbool.o
 gltests/test-stddef
@@ -383,10 +425,16 @@ gltests/test-sys_stat
 gltests/test-sys_stat.o
 gltests/test-sys_time
 gltests/test-sys_time.o
+gltests/test-sys_types
+gltests/test-sys_types.o
 gltests/test-sys_uio
 gltests/test-sys_uio.o
 gltests/test-sys_wait
 gltests/test-sys_wait.o
+gltests/test-thread_create
+gltests/test-thread_create.o
+gltests/test-thread_self
+gltests/test-thread_self.o
 gltests/test-time
 gltests/test-time.o
 gltests/test-u8-mbtoucr
@@ -574,8 +622,18 @@ lib/gltests/test-c-ctype
 lib/gltests/test-c-ctype.o
 lib/gltests/test-errno
 lib/gltests/test-errno.o
+lib/gltests/test-fdopen
+lib/gltests/test-fdopen.o
+lib/gltests/test-fgetc
+lib/gltests/test-fgetc.o
 lib/gltests/test-float
 lib/gltests/test-float.o
+lib/gltests/test-fputc
+lib/gltests/test-fputc.o
+lib/gltests/test-fread
+lib/gltests/test-fread.o
+lib/gltests/test-fwrite
+lib/gltests/test-fwrite.o
 lib/gltests/test-gc
 lib/gltests/test-gc-hmac-md5
 lib/gltests/test-gc-hmac-md5.o
@@ -592,14 +650,24 @@ lib/gltests/test-getdelim
 lib/gltests/test-getdelim.o
 lib/gltests/test-getline
 lib/gltests/test-getline.o
+lib/gltests/test-hmac-md5
+lib/gltests/test-hmac-md5.o
+lib/gltests/test-hmac-sha1
+lib/gltests/test-hmac-sha1.o
 lib/gltests/test-intprops
 lib/gltests/test-intprops.o
 lib/gltests/test-inttypes
 lib/gltests/test-inttypes.o
+lib/gltests/test-md5
+lib/gltests/test-md5.o
 lib/gltests/test-memchr
 lib/gltests/test-memchr.o
 lib/gltests/test-memmem
 lib/gltests/test-memmem.o
+lib/gltests/test-sha1
+lib/gltests/test-sha1.o
+lib/gltests/test-stdalign
+lib/gltests/test-stdalign.o
 lib/gltests/test-stdbool
 lib/gltests/test-stdbool.o
 lib/gltests/test-stddef
