--- a/examples/openid20/Makefile.am
+++ b/examples/openid20/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-# Copyright (C) 2002-2012 Simon Josefsson
+# Copyright (C) 2012 Simon Josefsson
 #
 # This file is part of GNU SASL.
 #
@@ -16,13 +16,10 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-SUBDIRS = openid20
-
 AM_CFLAGS = $(WERROR_CFLAGS) $(WARN_CFLAGS)
-AM_CPPFLAGS = -I$(top_srcdir)/lib/src -I../lib/src
-LDADD = ../lib/src/libgsasl.la
+AM_CPPFLAGS = -I$(top_srcdir)/lib/src -I$(top_builddir)/lib/src
+LDADD = $(top_builddir)/lib/src/libgsasl.la
 
-EXTRA_DIST = README
+EXTRA_DIST = README gsasl-openid20-redirect.php gsasl-openid20-rp.php
 
-noinst_PROGRAMS = client client-serverfirst client-mech smtp-server \
-	client-callback client-xmpp-saml20 server-xmpp-saml20
+noinst_PROGRAMS = smtp-server-openid20
