--- a/examples/saml20/Makefile.am
+++ b/examples/saml20/Makefile.am
@@ -19,6 +19,7 @@
 AM_CFLAGS = $(WERROR_CFLAGS) $(WARN_CFLAGS)
 AM_CPPFLAGS = -I$(top_srcdir)/lib/src -I$(top_builddir)/lib/src \
 	$(LASSO_CFLAGS)
+AM_LDFLAGS = -no-install
 LDADD = $(top_builddir)/lib/src/libgsasl.la $(LASSO_LIBS)
 
 EXTRA_DIST = README
