Improve ./configure summary.

--- a/configure.ac
+++ b/configure.ac
@@ -168,12 +168,12 @@ AC_CONFIG_FILES([
 ])
 AC_OUTPUT
 
-AC_MSG_NOTICE([summary of build options:
+AC_MSG_NOTICE([summary of main build options:
 
   version:            ${VERSION}
   Host type:          ${host}
   Install prefix:     ${prefix}
-  Compiler:           ${CC}
+  Compiler:           cc: ${CC} cflags: ${CFLAGS} cppflags: ${CPPFLAGS}
   Warning flags:      $gl_gcc_warnings
   Library types:      Shared=${enable_shared}, Static=${enable_static}
   Valgrind:           ${VALGRIND}
