--- a/lib/gl/Makefile.am
+++ b/lib/gl/Makefile.am
@@ -252,7 +252,7 @@ libgl_la_SOURCES += gettext.h
 
 distclean-local: clean-GNUmakefile
 clean-GNUmakefile:
-	test x'$(VPATH)' != x && rm -f $(top_builddir)/GNUmakefile || :
+	test '$(srcdir)' = . || rm -f $(top_builddir)/GNUmakefile
 
 EXTRA_DIST += $(top_srcdir)/GNUmakefile
 
