--- a/lib/win32/libgsasl.vcproj
+++ b/lib/win32/libgsasl.vcproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="windows-1250"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="9.00"
 	Name="libgsasl"
 	ProjectGUID="{0B883079-812A-405E-AC8F-59F47CE9A3FF}"
 	RootNamespace="libgsasl"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -18,14 +19,14 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			IntermediateDirectory="../../windows/build-x86/$(ProjectName)/$(ConfigurationName)"
 			ConfigurationType="2"
 			CharacterSet="2"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Generating configuration..."
-				CommandLine=""
+				CommandLine="if not exist ..\gl\stdalign.h copy ..\gl\stdalign.in.h ..\gl\stdalign.h&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -49,7 +50,7 @@
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
+				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="4"
 			/>
 			<Tool
@@ -63,8 +64,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="lib/debug/$(ProjectName).dll"
+				OutputFile="lib/debug/$(ProjectName)-7.dll"
 				GenerateDebugInformation="true"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				ImportLibrary="lib/debug/$(TargetName).lib"
 			/>
 			<Tool
@@ -86,16 +89,14 @@
 				Name="VCAppVerifierTool"
 			/>
 			<Tool
-				Name="VCWebDeploymentTool"
-			/>
-			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="if not exist ..\..\windows\dist\bin mkdir ..\..\windows\dist\bin&#x0D;&#x0A;if not exist ..\..\windows\dist\include mkdir ..\..\windows\dist\include&#x0D;&#x0A;if not exist ..\..\windows\dist\lib mkdir ..\..\windows\dist\lib&#x0D;&#x0A;copy lib\debug\libgsasl-7.dll ..\..\windows\dist\bin\&#x0D;&#x0A;copy lib\debug\libgsasl-7.lib ..\..\windows\dist\lib\&#x0D;&#x0A;copy ..\src\gsasl.h ..\..\windows\dist\include\&#x0D;&#x0A;copy ..\src\gsasl-compat.h ..\..\windows\dist\include\&#x0D;&#x0A;copy ..\src\gsasl-mech.h ..\..\windows\dist\include\&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			IntermediateDirectory="../../windows/build-x86/$(ProjectName)/$(ConfigurationName)"
 			ConfigurationType="2"
 			CharacterSet="2"
 			WholeProgramOptimization="1"
@@ -103,7 +104,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Generating configuration..."
-				CommandLine=""
+				CommandLine="if not exist ..\gl\stdalign.h copy ..\gl\stdalign.in.h ..\gl\stdalign.h&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -124,7 +125,7 @@
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
+				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="3"
 			/>
 			<Tool
@@ -138,7 +139,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="lib/$(ProjectName).dll"
+				OutputFile="lib/$(ProjectName)-7.dll"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				ImportLibrary="lib/$(TargetName).lib"
 			/>
 			<Tool
@@ -158,9 +161,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -234,15 +234,15 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\mechname.c"
+				>
+			</File>
+			<File
 				RelativePath="..\src\property.c"
 				>
 			</File>
 			<File
 				RelativePath="..\src\register.c"
-				>
-			</File>
-			<File
-				RelativePath="..\src\mechname.c"
 				>
 			</File>
 			<File
@@ -443,6 +443,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\digest-md5\qop.c"
+					>
+				</File>
+				<File
 					RelativePath="..\digest-md5\server.c"
 					>
 					<FileConfiguration
@@ -470,10 +474,6 @@
 				</File>
 				<File
 					RelativePath="..\digest-md5\validate.c"
-					>
-				</File>
-				<File
-					RelativePath="..\digest-md5\qop.c"
 					>
 				</File>
 			</Filter>
@@ -929,6 +929,10 @@
 							XMLDocumentationFileName="$(IntDir)\$(InputName)1.xdc"
 						/>
 					</FileConfiguration>
+				</File>
+				<File
+					RelativePath="..\gl\c-ctype.c"
+					>
 				</File>
 				<File
 					RelativePath="..\gl\gc-gnulib.c"
