--- a/lib/win32/libgsasl.vcproj
+++ b/lib/win32/libgsasl.vcproj
@@ -26,7 +26,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Generating configuration..."
-				CommandLine="if not exist ..\gl\stdalign.h copy ..\gl\stdalign.in.h ..\gl\stdalign.h&#x0D;&#x0A;"
+				CommandLine="if not exist ..\gl\stdalign.h copy ..\gl\stdalign.in.h ..\gl\stdalign.h&#x0D;&#x0A;if not exist include\ntlm.h copy ..\..\libntlm\ntlm.h.in include\ntlm.h&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -43,7 +43,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="include;../src;../gl;.."
+				AdditionalIncludeDirectories="include;../src;../gl;..;../../libntlm;../../libntlm/gl"
 				PreprocessorDefinitions="WIN32;_DEBUG;_USRDLL;GSASL_EXPORTS;HAVE_CONFIG_H;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -104,7 +104,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Generating configuration..."
-				CommandLine="if not exist ..\gl\stdalign.h copy ..\gl\stdalign.in.h ..\gl\stdalign.h&#x0D;&#x0A;"
+				CommandLine="if not exist ..\gl\stdalign.h copy ..\gl\stdalign.in.h ..\gl\stdalign.h&#x0D;&#x0A;if not exist include\ntlm.h copy ..\..\libntlm\ntlm.h.in include\ntlm.h&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -120,7 +120,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="include;../src;../gl;.."
+				AdditionalIncludeDirectories="include;../src;../gl;..;../../libntlm;../../libntlm/gl"
 				PreprocessorDefinitions="WIN32;NDEBUG;_USRDLL;GSASL_EXPORTS;HAVE_CONFIG_H;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
@@ -177,7 +177,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Generating configuration..."
-				CommandLine="if not exist ..\gl\stdalign.h copy ..\gl\stdalign.in.h ..\gl\stdalign.h&#x0D;&#x0A;"
+				CommandLine="if not exist ..\gl\stdalign.h copy ..\gl\stdalign.in.h ..\gl\stdalign.h&#x0D;&#x0A;if not exist include\ntlm.h copy ..\..\libntlm\ntlm.h.in include\ntlm.h&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -194,7 +194,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="include;../src;../gl;.."
+				AdditionalIncludeDirectories="include;../src;../gl;..;../../libntlm;../../libntlm/gl"
 				PreprocessorDefinitions="WIN32;_DEBUG;GSASL_STATIC;HAVE_CONFIG_H;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -245,7 +245,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Generating configuration..."
-				CommandLine="if not exist ..\gl\stdalign.h copy ..\gl\stdalign.in.h ..\gl\stdalign.h&#x0D;&#x0A;"
+				CommandLine="if not exist ..\gl\stdalign.h copy ..\gl\stdalign.in.h ..\gl\stdalign.h&#x0D;&#x0A;if not exist include\ntlm.h copy ..\..\libntlm\ntlm.h.in include\ntlm.h&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -261,7 +261,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="include;../src;../gl;.."
+				AdditionalIncludeDirectories="include;../src;../gl;..;../../libntlm;../../libntlm/gl"
 				PreprocessorDefinitions="WIN32;NDEBUG;GSASL_STATIC;HAVE_CONFIG_H;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
@@ -1597,6 +1597,74 @@
 				</File>
 				<File
 					RelativePath="..\gl\vasprintf.c"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="ntlm"
+				>
+				<File
+					RelativePath="..\..\libntlm\gl\des.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\libntlm\gl\md4.c"
+					>
+				</File>
+				<File
+					RelativePath="..\ntlm\mechinfo.c"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							AdditionalIncludeDirectories=""
+							ObjectFile="$(IntDir)\$(InputName)8.obj"
+							XMLDocumentationFileName="$(IntDir)\$(InputName)8.xdc"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							AdditionalIncludeDirectories=""
+							ObjectFile="$(IntDir)\$(InputName)8.obj"
+							XMLDocumentationFileName="$(IntDir)\$(InputName)8.xdc"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Debug-Static|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							AdditionalIncludeDirectories=""
+							ObjectFile="$(IntDir)\$(InputName)8.obj"
+							XMLDocumentationFileName="$(IntDir)\$(InputName)8.xdc"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release-Static|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							AdditionalIncludeDirectories=""
+							ObjectFile="$(IntDir)\$(InputName)8.obj"
+							XMLDocumentationFileName="$(IntDir)\$(InputName)8.xdc"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath="..\ntlm\ntlm.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\libntlm\smbencrypt.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\libntlm\smbutil.c"
 					>
 				</File>
 			</Filter>
